<resources>
    <string name="app_name">SmartCity</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_hint">username</string>
    <string name="password_hint">password</string>
    <string name="login_button">Log in</string>
    <string name="register_link"><u>don\'t have an account? register</u></string>
    <string name="pseudonym">pseudonym</string>
    <string name="register_title">create new account</string>
    <string name="confirm_password">confirm password</string>
    <string name="mail">e-mail</string>
    <string name="next">next</string>
    <string name="cancel">Cancel</string>
    <string name="birth_date_hint">birth date</string>
    <string name="height_hint">height</string>
    <string name="weight_hint">weight</string>
    <string name="city_hint">city</string>
    <string name="register_button">register</string>
    <string name="actualite">actualite</string>
    <string name="commerce">commerce</string>
    <string name="reseaux">reseaux sociaux</string>
    <string name="publicite">publicite</string>
    <string name="accueil">accueil</string>
    <string name="moteo">meteo locale</string>
    <string name="trafic">etat trafic</string>
    <string name="actualiteV">actualite ville</string>
    <string name="agenda">agenda/alarme</string>
    <string name="profile">my profile</string>
    <string name="settings">settings</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="sign_out">sign out</string>
    <string name="weather">Weather</string>
    <string name="forecasts">forecasts</string>
    <string name="na">N/A</string>


    <string name="open_weather_maps_app_id">fdd4aa25cb96c8bf1b00b1eb51893834</string>
    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>


    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_weather">WeatherActivity</string>


</resources>
